Inserção do crud de formas de pagamento e meios de pagamento

--- a/src/JacarandaCasaDeBrincar.Data/JacarandaCasaDeBrincar.Data.csproj
+++ b/src/JacarandaCasaDeBrincar.Data/JacarandaCasaDeBrincar.Data.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\JacarandaCasaDeBrincar.Business\JacarandaCasaDeBrincar.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
