Dockerização da api e banco de dados

--- a/src/JacarandaCasaDeBrincar.Api/appsettings.json
+++ b/src/JacarandaCasaDeBrincar.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=dbJacaranda;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=dbJacaranda;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=db,1433;Database=dbJacaranda;User Id=SA;Password=Password@12345;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
